# aindy-sdk

./: CHANGELOG.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: publish.yml  sdk-ci.yml
aindy_sdk/: __init__.py  client.py  events.py  exceptions.py  execution.py  flow.py  memory.py  nodus.py  sandbox.py  syscalls.py
aindy_sdk/watcher/: __init__.py  classifier.py  session_tracker.py  signal_emitter.py  watcher.py  window_detector.py
examples/: quickstart.py  watcher_demo.py
tests/: __init__.py  test_sdk.py  test_watcher.py
