[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aindy-sdk"
version = "1.0.0"
description = "Client SDK for the A.I.N.D.Y. runtime API"
authors = [{ name = "Shawn Knight" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aindy_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
